# cppserver

./: .gitignore  CMakeLists-b.txt  CMakeLists.txt  README.md  TO_DELETE.txt  VERSION  cppserver-config.cmake  package.sh  start.sh
.github/workflows/: build.yml
example/: CMakeLists.txt
example/certificates/: generate.sh
example/config/: CMakeLists.txt  main.cpp
example/server/: CMakeLists.txt  example.cmake
example/server/basic/: CMakeLists.txt  main.cpp
example/websocket/: CMakeLists.txt
example/websocket/basic/: CMakeLists.txt  main.cpp
script/: docker_run.sh  get_llvm.sh
src/: CMakeLists.txt  cppserver-config.cmake.in
src/main/: CMakeLists.txt  cppserver-config.cmake.in  cppserver.pc.in
src/main/namespace.digital/: CMakeLists.txt
src/main/namespace.digital/cppserver/: CMakeLists.txt  server.cpp  server.hpp
src/main/namespace.digital/cppserver/configuration/: CMakeLists.txt
src/main/namespace.digital/cppserver/configuration/driver/: ini.cpp  ini.hpp
src/main/namespace.digital/cppserver/router/: CMakeLists.txt  attribute.cpp  attribute.hpp  attributes.cpp  attributes.hpp  header.hpp  http_worker.cpp  http_worker.hpp  listener.cpp  listener.hpp  mime_type.hpp  request.hpp  response.hpp  route.cpp  route.hpp  router.cpp  router.hpp  ws_context.hpp  ws_handler.hpp  ws_worker.hpp
src/main/namespace.digital/cppserver/util/: CMakeLists.txt  file_content.hpp  string_util.hpp
src/namespace.digital/: CMakeLists.txt
src/namespace.digital/cppserver/: CMakeLists.txt
src/namespace.digital/cppserver/configuration/: CMakeLists.txt
src/namespace.digital/cppserver/configuration/driver/: ini.cpp  ini.hpp
src/namespace.digital/cppserver/router/: CMakeLists.txt  router.cpp  router.hpp
src/namespace.digital/cppserver/server/: CMakeLists.txt
src/namespace.digital/cppserver/server/router/: CMakeLists.txt  router.cpp  router.hpp
src/namespace.digital/test/: CMakeHelper.cmake  CMakeLists.txt
src/namespace.digital/test/server/: CMakeLists.txt  server_test.cpp
src/resource/: config.ini
src/resource/test/: test_config.ini
src/test/: CMakeHelper.cmake  CMakeLists.txt
src/test/namespace.digital/: CMakeLists.txt
src/test/namespace.digital/cppserver/configuration/: CMakeLists.txt
src/test/namespace.digital/cppserver/configuration/driver/: ini_test.cpp
